tests/rosetta/out/Pascal/arithmetic-numbers.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/arithmetic-numbers.pas
arithmetic-numbers.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
arithmetic-numbers.pas(73,13) Error: Incompatible types: got "TArray$1$crcE41905E8" expected "TArray$1$crc9F312717"
arithmetic-numbers.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
arithmetic-numbers.pas(86,43) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
arithmetic-numbers.pas(89,13) Error: Incompatible types: got "TArray$1$crcE41905E8" expected "TArray$1$crc9F312717"
arithmetic-numbers.pas(140,46) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
arithmetic-numbers.pas(148,15) Error: Incompatible types: got "Int64" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
arithmetic-numbers.pas(149,41) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
arithmetic-numbers.pas(150,13) Error: Incompatible types: got "<procedure variable type of function(Variant):LongInt is nested;Register>" expected "LongInt"
arithmetic-numbers.pas(170,43) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
arithmetic-numbers.pas(180,48) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
arithmetic-numbers.pas(181,15) Error: Operator is not overloaded: "TArray$1$crcE41905E8" = "ShortInt"
arithmetic-numbers.pas(184,16) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Double is nested;Register>"
arithmetic-numbers.pas(185,18) Error: Operator is not overloaded: "LongInt" mod "TArray$1$crcE41905E8"
arithmetic-numbers.pas(187,18) Error: Operator is not overloaded: "LongInt" div "TArray$1$crcE41905E8"
arithmetic-numbers.pas(189,28) Error: Incompatible types: got "<procedure variable type of function(Variant):Double is nested;Register>" expected "ShortString"
arithmetic-numbers.pas(190,26) Error: Operator is not overloaded: "TArray$1$crcE41905E8" * "TArray$1$crcE41905E8"
arithmetic-numbers.pas(192,24) Error: Operator is not overloaded: "LongInt" * "<procedure variable type of function(Variant):Double is nested;Register>"
arithmetic-numbers.pas(199,13) Error: Incompatible types: got "TArray$1$crcE41905E8" expected "TArray$1$crc9F312717"
arithmetic-numbers.pas(219,10) Error: Incompatible types: got "TArray$1$crc9F312717" expected "TArray$1$crcE41905E8"
arithmetic-numbers.pas(220,27) Error: Incompatible type for arg no. 1: Got "TArray$1$crcE41905E8", expected "TArray$1$crc9F312717"
arithmetic-numbers.pas(221,40) Error: Incompatible type for arg no. 2: Got "TArray$1$crcE41905E8", expected "TArray$1$crc9F312717"
arithmetic-numbers.pas(240,28) Error: Incompatible type for arg no. 1: Got "TArray$1$crcE41905E8", expected "LongInt"
arithmetic-numbers.pas(241,13) Fatal: String exceeds line
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
